<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mahe.foodsy_appmerise.HomeActivity">
    <item
        android:id="@+id/action_starters"
        android:orderInCategory="100"
        android:title="@string/starters"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_maincourse"
        android:orderInCategory="100"
        android:title="@string/main_course"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dessert"
        android:orderInCategory="100"
        android:title="@string/desserts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_drinks"
        android:orderInCategory="100"
        android:title="@string/drinks"
        app:showAsAction="never" />
</menu>
