<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/foodsy">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/grayimage"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="40dp"
        android:id="@+id/tv_hi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/tv_username"
        android:layout_toRightOf="@id/tv_hi"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/apple"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        app:civ_border_width="7dp"
        android:id="@+id/civ_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What food do you want today?"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="45sp"
        android:layout_below="@id/tv_hi"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/tv_whatfood"/>

    <EditText
        android:layout_width="340dp"
        android:layout_height="50sp"
        android:layout_below="@id/tv_whatfood"
        android:layout_centerHorizontal="true"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_current_location"
        android:id="@+id/et_current_loc"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_current_loc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:background="#fff"
        android:hint="@string/enter_destination_location"
        android:id="@+id/et_destination_loc"
        android:textAlignment="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_destination_loc"
        android:layout_alignLeft="@id/et_destination_loc"
        android:layout_marginTop="20dp"
        android:text="@string/dine_in"
        android:textSize="25sp"
        android:background="@null"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_marginLeft="20sp"
        android:id="@+id/btn_dinein"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_destination_loc"
        android:layout_marginTop="20dp"
        android:text="takeaway"
        android:textSize="25sp"
        android:background="@null"
        android:textColor="#fff"
        android:layout_alignRight="@id/et_destination_loc"
        android:layout_marginRight="20sp"
        android:textStyle="bold" />
    <Button
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_dinein"
        android:background="@color/colorPrimary"
        android:text="search"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:textStyle="bold"
        />

</RelativeLayout>